--- a/WPF_Button_Style/Styles/Button_Flat_Style.xaml
+++ b/WPF_Button_Style/Styles/Button_Flat_Style.xaml
@@ -1,13 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    
+    
+    <!--[Dark Theme]-->
     <SolidColorBrush x:Key="DarkTheme.Dark" Color="#3B3B3B"/>
     <SolidColorBrush x:Key="DarkTheme.Light" Color="#9B9B9B"/>
 
     <SolidColorBrush x:Key="Background.Highlight" Color="#3E3D3D"/>
     <SolidColorBrush x:Key="Foreground.Highlight" Color="#686767 "/>
-
-   
 
     <Style x:Key="DarkTheme" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="{StaticResource DarkTheme.Dark}"/>
@@ -60,10 +61,10 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <!--[Dark Theme]-->
 
 
-
-
+    <!--[Light Theme]-->
 
     <SolidColorBrush x:Key="LightTheme.Background" Color="#FDFEFE"/>
     <SolidColorBrush x:Key="LightTheme.Foreground" Color="#808B96"/>
@@ -122,7 +123,11 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <!--[Light Theme]-->
 
+
+
+    <!--[Success Theme]-->
     <SolidColorBrush x:Key="SuccessTheme.Background" Color="#48C9B0"/>
     <SolidColorBrush x:Key="SuccessTheme.Foreground" Color="#E8F8F5"/>
 
@@ -180,6 +185,10 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <!--[Success Theme]-->
+
+
+    <!--[Info Theme]-->
 
     <SolidColorBrush x:Key="InfoTheme.Background" Color="#5499C7"/>
     <SolidColorBrush x:Key="InfoTheme.Foreground" Color="#D4E6F1"/>
@@ -238,7 +247,10 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <!--[Info Theme]-->
 
+
+    <!--[Warning Theme]-->
 
     <SolidColorBrush x:Key="WarningTheme.Background" Color="#F7DC6F"/>
     <SolidColorBrush x:Key="WarningTheme.Foreground" Color="#212F3D"/>
@@ -297,7 +309,11 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <!--[Warning Theme]-->
 
+
+
+    <!--[Danger Theme]-->
 
     <SolidColorBrush x:Key="DangerTheme.Background" Color="#E74C3C"/>
     <SolidColorBrush x:Key="DangerTheme.Foreground" Color="#F5B7B1"/>
@@ -357,5 +373,5 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+    <!--[Danger Theme]-->
 </ResourceDictionary>
