--- a/WPF_Button_Style/Styles/GlobalStyle.xaml
+++ b/WPF_Button_Style/Styles/GlobalStyle.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="./Button_Flat_Style.xaml"/>
+        <ResourceDictionary Source="./Button_Outline_Style.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
 </ResourceDictionary>
