--- a/WPF_Button_Style/MainWindow.xaml
+++ b/WPF_Button_Style/MainWindow.xaml
@@ -75,5 +75,39 @@
                     Content="Warning Button"
                     Padding="5,10"></Button>
         </StackPanel>
+
+        <StackPanel Grid.Column="2" Margin="5 0 5 0">
+            <TextBlock Padding="10" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Disable Flat Button"/>
+            <Button Style="{StaticResource DarkTheme}"
+                    IsEnabled="False"
+                    Margin="0 5 0 5"
+                    Content="Dark Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource LightTheme}" 
+                    IsEnabled="False"
+                    Margin="0 5 0 5"
+                    Content="Light Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource SuccessTheme}" 
+                    IsEnabled="False"
+                    Margin="0 5 0 5"
+                    Content="Success Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource InfoTheme}" 
+                    IsEnabled="False"
+                    Margin="0 5 0 5"
+                    Content="Info Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource DangerTheme}" 
+                    IsEnabled="False"
+                    Margin="0 5 0 5"
+                    Content="Danger Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource WarningTheme}" 
+                    IsEnabled="False"
+                    Margin="0 5 0 5"
+                    Content="Warning Button"
+                    Padding="5,10"></Button>
+        </StackPanel>
     </Grid>
 </Window>
