--- a/WPF_Button_Style/MainWindow.xaml
+++ b/WPF_Button_Style/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_Button_Style"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="WPF Button Styles" Height="450" Width="800">
     <Window.Resources>
         <ResourceDictionary Source="./Styles/GlobalStyle.xaml"/>
     </Window.Resources>
@@ -77,7 +77,7 @@
         </StackPanel>
 
         <StackPanel Grid.Column="2" Margin="5 0 5 0">
-            <TextBlock Padding="10" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Disable Flat Button"/>
+            <TextBlock Padding="10" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Disable Flat/Outline Button"/>
             <Button Style="{StaticResource DarkTheme}"
                     IsEnabled="False"
                     Margin="0 5 0 5"
@@ -105,6 +105,79 @@
                     Padding="5,10"></Button>
             <Button Style="{StaticResource WarningTheme}" 
                     IsEnabled="False"
+                    Margin="0 5 0 5"
+                    Content="Warning Button"
+                    Padding="5,10"></Button>
+        </StackPanel>
+
+        <StackPanel Grid.Column="3" Margin="5 0 5 0">
+            <TextBlock Padding="10" 
+                       HorizontalAlignment="Center" 
+                       VerticalAlignment="Center" 
+                       Text="Rounded Button"/>
+            <Button Style="{StaticResource DarkTheme.Rounded}"
+                    
+                    Margin="0 5 0 5"
+                    Content="Dark Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource LightTheme.Rounded}" 
+                    
+                    Margin="0 5 0 5"
+                    Content="Light Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource SuccessTheme.Rounded}" 
+                    
+                    Margin="0 5 0 5"
+                    Content="Success Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource InfoTheme.Rounded}" 
+                    
+                    Margin="0 5 0 5"
+                    Content="Info Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource DangerTheme.Rounded}" 
+                    
+                    Margin="0 5 0 5"
+                    Content="Danger Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource WarningTheme.Rounded}" 
+                    
+                    Margin="0 5 0 5"
+                    Content="Warning Button"
+                    Padding="5,10"></Button>
+        </StackPanel>
+        <StackPanel Grid.Column="4" Margin="5 0 5 0">
+            <TextBlock Padding="10" 
+                       HorizontalAlignment="Center" 
+                       VerticalAlignment="Center" 
+                       Text="Rounded Outline Button"/>
+            <Button Style="{StaticResource DarkTheme.Outline.Rounded}"
+                    
+                    Margin="0 5 0 5"
+                    Content="Dark Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource LightTheme.Outline.Rounded}" 
+                    
+                    Margin="0 5 0 5"
+                    Content="Light Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource SuccessTheme.Outline.Rounded}" 
+                    
+                    Margin="0 5 0 5"
+                    Content="Success Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource InfoTheme.Outline.Rounded}" 
+                    
+                    Margin="0 5 0 5"
+                    Content="Info Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource DangerTheme.Outline.Rounded}" 
+                    
+                    Margin="0 5 0 5"
+                    Content="Danger Button"
+                    Padding="5,10"></Button>
+            <Button Style="{StaticResource WarningTheme.Outline.Rounded}" 
+                    
                     Margin="0 5 0 5"
                     Content="Warning Button"
                     Padding="5,10"></Button>
